Fixed bug - logging in looped round asking for login forever. Fixed bug - trying to login added .json to the end of the url. Login no longer traps exceptions. Default OpenBrowser implementation now works on all versions of .net.

--- a/BaseCampApi/BaseCampApi.csproj
+++ b/BaseCampApi/BaseCampApi.csproj
@@ -11,6 +11,9 @@
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>Basecamp API C#</PackageTags>
     <PackageReleaseNotes>This replaces BaseCampApiNetCore</PackageReleaseNotes>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
